force-app/main/default/objects/Manufacturer__c/Manufacturer__c.object-meta.xml
<CustomObject>
    <label>Manufacturer</label>
    <nameField>
        <label>Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>