force-app/main/default/objects/Manufacturer__c/fields/Manufacturer_Email__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Email__c</fullName>
    <label>Manufacturer Email</label>
    <type>Email</type>
</CustomField>