force-app/main/default/objects/Manufacturer__c/fields/Manufacturer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Phone__c</fullName>
    <label>Manufacturer Phone</label>
    <type>Phone</type>
</CustomField>