force-app/main/default/objects/Manufacturer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Manufacturer_Email__c</columns>
    <columns>Manufacturer_Phone__c</columns>
    <columns>Additional_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>